[tool.poetry]
name = "showergel"
version = "0.3.0-alpha.7"
description = "Companion application for a Liquidsoap radio"
authors = ["Martin Kirchgessner <martin.kirch@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.rst"
homepage = "https://github.com/martinkirch/showergel"
repository = "https://github.com/martinkirch/showergel.git"
documentation = "https://showergel.readthedocs.io/"
keywords = ["radio", "liquidsoap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players"
]
include = ["bottle/__init__.py", "bottle_sqlalchemy/__init__.py"]

[tool.poetry.scripts]
showergel = "showergel.commands.main:showergel_cli"

[tool.poetry.dependencies]
python = "^3.7.2"
sqlalchemy = "^1.3.19"
click = "^7.1.2"
Paste = "^3.5.0"
sphinx-rtd-theme = "^0.5.1"
toml = "^0.10.2"
APScheduler = "^3.7.0"
arrow = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
WebTest = "^2.0.35"
snooty-lextudio = "^1.8.10-alpha.0"
Sphinx = "^4.5"
sphinxcontrib-httpdomain = "^1.7.0"
rich = "^12.5.1"
pylint = "^2.14.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
