[tool.poetry]
name = "showergel"
version = "0.4.0a0"
description = "Companion application for a Liquidsoap radio"
authors = ["Martin Kirchgessner <martin.kirch@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.rst"
homepage = "https://github.com/martinkirch/showergel"
repository = "https://github.com/martinkirch/showergel.git"
documentation = "https://showergel.readthedocs.io/"
keywords = ["radio", "liquidsoap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players"
]
include = ["bottle/__init__.py", "bottle_sqlalchemy/__init__.py"]

[tool.poetry.scripts]
showergel = "showergel.commands.main:showergel_cli"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.19"
click = "^8"
Paste = "^3.5.0"
sphinx-rtd-theme = "^1.2.2"
toml = "^0.10.2"
APScheduler = "^3.7.0"
arrow = "^1.1.0"
watchdog = "^3.0.0"
argon2-cffi = "^23.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
WebTest = "^3.0.0"
Sphinx = "^6"
sphinxcontrib-httpdomain = "^1.7.0"
rich = "^13"
pylint = "^2.14.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
